fix: flay-tag-manager에서 overflow 속성 제거

--- a/client-web/src/flay/panel/FlayTagManager.scss
+++ b/client-web/src/flay/panel/FlayTagManager.scss
@@ -80,7 +80,6 @@ flay-tag-manager {
 
     margin: 0;
     padding: 1rem;
-    overflow: auto;
 
     fieldset {
       position: relative;
